--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   responsive_framework: ^0.1.0
+  url_launcher: ^6.0.4
 
 dev_dependencies:
   flutter_test:
