--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Deploy
       uses: s0/git-publish-subdir-action@develop
       env:
-        REPO: git@github.com:owner/repo.git
+        REPO: self
         BRANCH: static
         FOLDER: build/web/
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
