--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   responsive_framework: ^0.1.0
   url_launcher: ^6.0.4
+  dependencies:
+  font_awesome_flutter: ^9.0.0
 
 dev_dependencies:
   flutter_test:
