--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   responsive_framework: ^0.1.0
   url_launcher: ^6.0.4
-  dependencies:
   font_awesome_flutter: ^9.0.0
+  flutter_staggered_grid_view: ^0.4.0
+  entry: ^0.0.4
+
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +53,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - images/
+    - images/art/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
