changed github pages repo url to ssh url

--- a/.github/workflows/githubpages.yml
+++ b/.github/workflows/githubpages.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Deploy
       uses: s0/git-publish-subdir-action@develop
       env:
-        REPO: tg21.github.io
+        REPO: git@github.com:tg21/tg21.github.io.git
         BRANCH: master
         FOLDER: build/web/
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
